--- a/gvti1ibavnc.html
+++ b/gvti1ibavnc.html
@@ -1,1 +1,1 @@
-<div>With numbers like this, I'll be around 300 push-ups and 50 pu</div>
+<div>With numbers like this, I'll be around 300 push-ups and 50 pull-</div>
