--- a/gvti1ibavnc.html
+++ b/gvti1ibavnc.html
@@ -1,1 +1,1 @@
-<div>With numbers like this, I'll be around 300 push-ups and 50 pull-ups in a workout, which is a pretty reasonable volume. </div><div>My weight is still increasing. I haven't been able to make any </div>
+<div>With numbers like this, I'll be around 300 push-ups and 50 pull-ups in a workout, which is a pretty reasonable volume. </div><div>My weight is still increasing. I haven't been able to make any headway</div>
