--- a/fisktdns83k.html
+++ b/fisktdns83k.html
@@ -1,1 +1,1 @@
-<div>That's an upward trend for sure. Maybe I need to think about my diet and make some changes there. Single servings only? No booze during the week? Sugar in my coffee? Eating out less? Better c </div><div></div><div></div><div></div><div></div>
+<div>That's an upward trend for sure. Maybe I need to think about my diet and make some changes there. Single servings only? No booze during the week? Sugar in my coffee? Eating out less? Better choi </div><div></div><div></div><div></div><div></div>
