--- a/g8la141lu18.html
+++ b/g8la141lu18.html
@@ -1,1 +1,1 @@
-<div>I'm still not hitting my weight loss goals. I am starting to make a small amount of progress t</div>
+<div>I'm still not hitting my weight loss goals. I am starting to make a small amount of progress though</div>
