--- a/305klfi4sa.html
+++ b/305klfi4sa.html
@@ -1,1 +1,1 @@
-<div>September 25, </div><div></div><div></div><div></div><div></div><div></div><div></div>
+<div>September 25, 2019</div><div></div><div></div><div></div><div></div><div></div><div></div>
