--- a/305klfi4sa.html
+++ b/305klfi4sa.html
@@ -1,1 +1,1 @@
-<div>September 25, 2019</div><div></div><div></div><div></div><div></div><div></div><div></div>
+<h2 data-label="338477" class="ltx_title_subsection">September 25, 2019</h2><div></div><div></div><div></div><div></div><div></div><div></div>
